@@ -8,6 +8,8 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 
 ### Added
     - to_feather and from_feather method overwrites to DMT.DataFrame
+    - DutLib save version 1.1: Added back proper load on from different path
+    - optional validate Flag for sim_con.read_and_run()
 
 ### Fixed
     - hidden bug in naming.get_specifier_from_string when a specifier is repeated in a non-convertable string
